--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Overgrowth Game - Polished</title>
+<title>Overgrowth Game - Fixed</title>
 <style>
 body {margin:0;font-family:sans-serif;background:#87CEEB;overflow:hidden;}
 #loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;flex-direction:column;background:#87CEEB;z-index:1000;}
 #flowerContainer{position:relative;width:150px;height:150px;}
-.petal{position:absolute;width:40px;height:80px;border-radius:50% 50% 50% 50%;transform-origin:bottom center;transform:scale(0) rotate(0deg); transition:transform 1s ease-out, background 2s ease;}
+.petal{position:absolute;width:40px;height:80px;border-radius:50% 50% 50% 50%;transform-origin:bottom center;transform:scale(0) rotate(0deg); transition:transform 1s ease-out, background 1s linear;}
 #gameScreen{display:none;padding:20px;text-align:center;}
 #playerPanel, #enemyPanel{margin:10px;display:flex;justify-content:center;flex-wrap:wrap;}
 .card{display:inline-block;width:120px;height:auto;margin:10px;padding:5px;background:#fff;border:2px solid #333;border-radius:8px;position:relative;cursor:pointer;transition:transform 0.3s,border 0.3s,box-shadow 0.3s;}
@@ -176,7 +176,7 @@ if(playerCards.length===0) return endGame('You Lose!');
 function endGame(result){gameScreen.style.display='none'; winScreen.style.display='block'; winMessage.textContent=result;}
 function restartGame(){initCards();winScreen.style.display='none';gameScreen.style.display='block';message.textContent='';optionsDiv.innerHTML='';renderCards();}
 
-// Polished Flower Bloom and Sway
+// Flower Bloom + Sway + Color Cycle
 function bloomFlower(){
   const colors=['red','orange','yellow','pink','magenta','purple','lightblue'];
   petals.forEach((petal,i)=>{
@@ -184,12 +184,11 @@ function bloomFlower(){
     setTimeout(()=>{
       petal.style.transform=`scale(1) rotate(${angle}deg)`;
       let colorIndex=0;
-      const colorInterval=setInterval(()=>{
+      setInterval(()=>{
         petal.style.background=colors[colorIndex];
         colorIndex=(colorIndex+1)%colors.length;
       },400);
-      petal.dataset.colorInterval=colorInterval;
-      petal.style.animation=`sway ${2+i*0.2}s infinite ease-in-out`;
+      petal.style.animation=`sway ${2+i*0.3}s infinite ease-in-out`;
     }, i*300);
   });
 }
@@ -207,4 +206,3 @@ initCards();
 </script>
 </body>
 </html>
-
