--- a/index.html
+++ b/index.html
@@ -1,1 +1,208 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Overgrowth Game - Loading Bar</title>
+<style>
+body {margin:0;font-family:sans-serif;background:#87CEEB;overflow:hidden;}
+/* Loading Screen */
+#loadingScreen{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;flex-direction:column;background:#87CEEB;z-index:1000;}
+#sun{width:60px;height:60px;border-radius:50%;background:yellow;margin-bottom:20px;animation:spin 2s linear infinite;box-shadow:0 0 15px yellow;}
+#loadingBarContainer{width:80%;height:20px;background:#fff;border-radius:10px;overflow:hidden;}
+#loadingBar{width:0%;height:100%;background:gold;transition:width 0.2s ease;}
+@keyframes spin {0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
+/* Game Screen */
+#gameScreen{display:none;padding:20px;text-align:center;}
+#playerPanel, #enemyPanel{margin:10px;display:flex;justify-content:center;flex-wrap:wrap;}
+.card{display:inline-block;width:120px;height:auto;margin:10px;padding:5px;background:#fff;border:2px solid #333;border-radius:8px;position:relative;cursor:pointer;transition:transform 0.3s,border 0.3s,box-shadow 0.3s;}
+.card:hover{transform:scale(1.05); box-shadow:0 0 10px rgba(0,0,0,0.2);}
+.card.selected{border:3px solid gold; box-shadow:0 0 20px yellow;}
+.card.enemy:hover{box-shadow:0 0 20px crimson;}
+.healthBar{width:100%;height:12px;background:red;border-radius:6px;overflow:hidden;margin-top:4px;}
+.healthFill{height:100%;background:green;width:100%;transition:width 0.5s ease;}
+.cardData{font-size:12px;margin-top:4px;text-align:left;}
+#message{margin-top:20px;font-weight:bold;min-height:24px;}
+#options{margin-top:10px;}
+.optionBtn{padding:8px 12px;margin:3px;font-size:14px;cursor:pointer;transition:background 0.3s;}
+.optionBtn:hover{background:#ffd700;}
+#winScreen{display:none;text-align:center;padding:20px;}
+button{padding:10px 20px;font-size:16px;margin-top:20px;}
+@keyframes shake {0%{transform:translateX(0);}20%{transform:translateX(-5px);}40%{transform:translateX(5px);}60%{transform:translateX(-5px);}80%{transform:translateX(5px);}100%{transform:translateX(0);}}
+@keyframes glow {0%{box-shadow:0 0 0px green;}50%{box-shadow:0 0 15px green;}100%{box-shadow:0 0 0px green;}}
+</style>
+</head>
+<body>
+
+<div id="loadingScreen">
+  <div id="sun"></div>
+  <div id="loadingBarContainer">
+    <div id="loadingBar"></div>
+  </div>
+  <p id="loadingText">Loading 0%</p>
+</div>
+
+<div id="gameScreen">
+<h1>Overgrowth</h1>
+<h3>Your Cards</h3>
+<div id="playerPanel"></div>
+<h3>Enemy Cards</h3>
+<div id="enemyPanel"></div>
+<p id="message"></p>
+<div id="options"></div>
+</div>
+
+<div id="winScreen">
+<h1 id="winMessage"></h1>
+<button onclick="restartGame()">Restart</button>
+</div>
+
+<script>
+// Loading Screen Logic
+const loadingBar=document.getElementById('loadingBar');
+const loadingText=document.getElementById('loadingText');
+const loadingScreen=document.getElementById('loadingScreen');
+const gameScreen=document.getElementById('gameScreen');
+
+let loadPercent=0;
+const loadInterval=setInterval(()=>{
+  loadPercent++;
+  loadingBar.style.width=loadPercent+'%';
+  loadingText.textContent='Loading '+loadPercent+'%';
+  if(loadPercent>=100){
+    clearInterval(loadInterval);
+    setTimeout(()=>{
+      loadingScreen.style.display='none';
+      gameScreen.style.display='block';
+      startGame();
+    },500);
+  }
+},30); // Adjust speed of loading here
+
+// Game Data
+let playerCards=[],enemyCards=[];
+let selectedPlayerCard=null,selectedAction=null;
+
+function createCard(name,hp,actions){return{name,maxHp:hp,hp,actions};}
+function draftCards(deck,count){const draft=[];const copy=[...deck];for(let i=0;i<count;i++){const index=Math.floor(Math.random()*copy.length);draft.push(copy.splice(index,1)[0]);}return draft;}
+
+function startGame(){
+  initCards();
+  renderCards();
+}
+
+// Initialize Cards
+function initCards(){
+const playerDeck=[
+createCard('Sunflower',40,[{name:'Sunbeam',type:'attack',value:15},{name:'Grow',type:'buff',value:10}]),
+createCard('Rose',50,[{name:'Thorn Strike',type:'attack',value:20},{name:'Shield',type:'buff',value:15}]),
+createCard('Tulip',35,[{name:'Petal Slash',type:'attack',value:12},{name:'Heal',type:'buff',value:10}]),
+createCard('Daisy',30,[{name:'Quick Hit',type:'attack',value:10},{name:'Regenerate',type:'buff',value:12}])
+];
+const enemyDeck=[
+createCard('Thorn',30,[{name:'Spike',type:'attack',value:12},{name:'Harden',type:'buff',value:8}]),
+createCard('Venus Flytrap',45,[{name:'Bite',type:'attack',value:18},{name:'Absorb',type:'buff',value:10}]),
+createCard('Cactus',40,[{name:'Prickle',type:'attack',value:15},{name:'Fortify',type:'buff',value:12}]),
+createCard('Poison Ivy',35,[{name:'Poison',type:'attack',value:14},{name:'Toughen',type:'buff',value:8}])
+];
+playerCards=draftCards(playerDeck,3);
+enemyCards=draftCards(enemyDeck,3);
+}
+
+// Rendering Cards
+const playerPanel=document.getElementById('playerPanel');
+const enemyPanel=document.getElementById('enemyPanel');
+const message=document.getElementById('message');
+const optionsDiv=document.getElementById('options');
+
+function renderCards(){
+playerPanel.innerHTML='';
+enemyPanel.innerHTML='';
+playerCards.forEach((card,i)=>{
+  const div=document.createElement('div');
+  div.className='card';
+  if(i===selectedPlayerCard) div.classList.add('selected');
+  if(card.flash) div.classList.add(card.flash);
+  div.innerHTML=`<strong>${card.name}</strong>
+  <div class="cardData">HP: ${card.hp}/${card.maxHp}<br>Actions:<br>${card.actions.map(a=>a.name).join(', ')}</div>
+  <div class="healthBar"><div class="healthFill" style="width:${(card.hp/card.maxHp*100)}%"></div></div>`;
+  div.onclick=()=>selectPlayerCard(i);
+  playerPanel.appendChild(div);
+});
+enemyCards.forEach((card,i)=>{
+  const div=document.createElement('div');
+  div.className='card enemy';
+  if(card.flash) div.classList.add(card.flash);
+  div.innerHTML=`<strong>${card.name}</strong>
+  <div class="cardData">HP: ${card.hp}/${card.maxHp}<br>Actions:<br>${card.actions.map(a=>a.name).join(', ')}</div>
+  <div class="healthBar"><div class="healthFill" style="width:${(card.hp/card.maxHp*100)}%"></div></div>`;
+  div.onclick=()=>{ 
+    if(selectedAction && selectedAction.type==='attack' && selectedPlayerCard!==null) {
+      performAction(selectedPlayerCard,selectedAction,i);
+    }
+  };
+  enemyPanel.appendChild(div);
+});
+playerCards.forEach(card=>{if(card.flash) setTimeout(()=>{delete card.flash; renderCards();},300);});
+enemyCards.forEach(card=>{if(card.flash) setTimeout(()=>{delete card.flash; renderCards();},300);});
+}
+
+// Player Interaction
+function selectPlayerCard(index){
+selectedPlayerCard=index; selectedAction=null; optionsDiv.innerHTML='';
+const card=playerCards[index];
+card.actions.forEach(act=>{
+  const btn=document.createElement('button'); btn.className='optionBtn'; btn.textContent=act.name;
+  btn.onclick=()=>{selectedAction=act; 
+  if(act.type==='buff'){
+    card.hp+=act.value; if(card.hp>card.maxHp) card.hp=card.maxHp;
+    card.flash='heal';
+    message.textContent=`${card.name} used ${act.name} and healed ${act.value}!`;
+    optionsDiv.innerHTML=''; renderCards();
+    setTimeout(enemyTurn,700);
+  } else{message.textContent='Select an enemy card to attack.';}};
+  optionsDiv.appendChild(btn);
+});
+renderCards();
+}
+
+// Attack Execution
+function performAction(playerIndex,action,enemyIndex){
+const player=playerCards[playerIndex];
+const target=enemyCards[enemyIndex];
+target.hp-=action.value;
+target.flash='damage';
+message.textContent=`${player.name} used ${action.name} on ${target.name} for ${action.value}!`;
+if(target.hp<=0) enemyCards.splice(enemyIndex,1);
+selectedPlayerCard=null; selectedAction=null; optionsDiv.innerHTML='';
+renderCards();
+if(enemyCards.length===0) return endGame('You Win!');
+setTimeout(enemyTurn,700);
+}
+
+function enemyTurn(){
+if(playerCards.length===0) return;
+const card=enemyCards[Math.floor(Math.random()*enemyCards.length)];
+const action=card.actions[Math.floor(Math.random()*card.actions.length)];
+if(action.type==='attack'){
+const target=playerCards[Math.floor(Math.random()*playerCards.length)];
+target.hp-=action.value; target.flash='damage';
+message.textContent=`Enemy ${card.name} used ${action.name} on ${target.name} for ${action.value}!`;
+if(target.hp<=0) playerCards=playerCards.filter(c=>c!==target);
+} else{
+card.hp+=action.value; if(card.hp>card.maxHp) card.hp=card.maxHp; card.flash='heal';
+message.textContent=`Enemy ${card.name} used ${action.name} and healed ${action.value}!`;
+}
+renderCards();
+if(playerCards.length===0) return endGame('You Lose!');
+}
+
+// End & Restart
+const winScreen=document.getElementById('winScreen');
+const winMessage=document.getElementById('winMessage');
+function endGame(result){gameScreen.style.display='none'; winScreen.style.display='block'; winMessage.textContent=result;}
+function restartGame(){initCards();winScreen.style.display='none';gameScreen.style.display='block';message.textContent='';optionsDiv.innerHTML='';renderCards();}
+</script>
+</body>
+</html>
 
