--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Overgrowth Game</title>
 <style>
-body {margin:0;font-family:sans-serif;background:#87CEEB;overflow:hidden;}
+body {margin:0;font-family:sans-serif;background:#87CEEB;overflow:hidden;position:relative;}
 
 /* Loading Screen */
 #loadingScreen{
@@ -25,7 +25,7 @@ body {margin:0;font-family:sans-serif;background:#87CEEB;overflow:hidden;}
 #loadingText{margin-top:10px; font-weight:bold;}
 
 /* Game Screen */
-#gameScreen{display:none; padding:20px; text-align:center;}
+#gameScreen{display:none; padding:20px; text-align:center; position:relative;}
 #playerPanel, #enemyPanel{margin:10px; display:flex; justify-content:center; flex-wrap:wrap;}
 .card{display:inline-block; width:120px; height:auto; margin:10px; padding:5px; background:#fff; border:2px solid #333; border-radius:8px; position:relative; cursor:pointer; transition:transform 0.3s,border 0.3s,box-shadow 0.3s;}
 .card:hover{transform:scale(1.05); box-shadow:0 0 10px rgba(0,0,0,0.2);}
@@ -40,6 +40,17 @@ body {margin:0;font-family:sans-serif;background:#87CEEB;overflow:hidden;}
 .optionBtn:hover{background:#ffd700;}
 #winScreen{display:none; text-align:center; padding:20px;}
 button{padding:10px 20px; font-size:16px; margin-top:20px;}
+
+/* Settings Button */
+#settingsBtn{
+  position:absolute; top:10px; right:10px; z-index:100;
+  padding:8px 12px; cursor:pointer; background:#fff; border:2px solid #333; border-radius:6px;
+}
+#settingsPanel{
+  position:absolute; top:50px; right:10px; width:180px; background:#fff; border:2px solid #333; border-radius:8px; padding:10px;
+  display:none; z-index:101;
+}
+#settingsPanel label{display:block; margin:8px 0; cursor:pointer;}
 
 /* Animations */
 @keyframes glow{0%{box-shadow:0 0 10px yellow;}50%{box-shadow:0 0 35px yellow;}100%{box-shadow:0 0 10px yellow;}}
@@ -58,13 +69,20 @@ button{padding:10px 20px; font-size:16px; margin-top:20px;}
 
 <!-- Game Screen -->
 <div id="gameScreen">
-<h1>Overgrowth</h1>
-<h3>Your Cards</h3>
-<div id="playerPanel"></div>
-<h3>Enemy Cards</h3>
-<div id="enemyPanel"></div>
-<p id="message"></p>
-<div id="options"></div>
+  <button id="settingsBtn">Settings ⚙️</button>
+  <div id="settingsPanel">
+    <label><input type="checkbox" id="muteMusic"> Mute Music</label>
+    <label><input type="checkbox" id="muteSFX"> Mute Sound Effects</label>
+    <button onclick="closeSettings()">Close</button>
+  </div>
+
+  <h1>Overgrowth</h1>
+  <h3>Your Cards</h3>
+  <div id="playerPanel"></div>
+  <h3>Enemy Cards</h3>
+  <div id="enemyPanel"></div>
+  <p id="message"></p>
+  <div id="options"></div>
 </div>
 
 <!-- Win Screen -->
@@ -74,7 +92,7 @@ button{padding:10px 20px; font-size:16px; margin-top:20px;}
 </div>
 
 <script>
-// Loading Screen Logic
+// ---------------- Loading Screen ----------------
 const loadingBar=document.getElementById('loadingBar');
 const loadingText=document.getElementById('loadingText');
 const loadingScreen=document.getElementById('loadingScreen');
@@ -95,10 +113,56 @@ const loadInterval=setInterval(()=>{
   }
 },30);
 
-// Game Data
+// ---------------- Audio Setup ----------------
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+let musicMuted=false;
+let sfxMuted=false;
+
+function playSound(frequency,duration=0.2,type='square'){
+  if(sfxMuted) return;
+  const osc = audioCtx.createOscillator();
+  const gain = audioCtx.createGain();
+  osc.type = type;
+  osc.frequency.value = frequency;
+  gain.gain.setValueAtTime(0.2,audioCtx.currentTime);
+  gain.gain.exponentialRampToValueAtTime(0.001,audioCtx.currentTime+duration);
+  osc.connect(gain).connect(audioCtx.destination);
+  osc.start();
+  osc.stop(audioCtx.currentTime+duration);
+}
+
+function playCardSelect(){ playSound(660,0.2,'sine'); }
+function playAttack(){ playSound(440,0.3,'square'); }
+function playHeal(){ playSound(550,0.3,'triangle'); }
+function playWin(){ playSound(880,0.5,'triangle'); }
+function playLose(){ playSound(220,0.5,'sawtooth'); }
+
+let bgInterval=null;
+function playBackgroundMusic(){
+  if(musicMuted) return;
+  const bpm=90;
+  const interval=(60/bpm)*1000;
+  const notes=[261.63,293.66,329.63,349.23,392.00];
+  bgInterval=setInterval(()=>{
+    if(musicMuted) return;
+    const osc=audioCtx.createOscillator();
+    const gain=audioCtx.createGain();
+    osc.type='sine';
+    osc.frequency.value=notes[Math.floor(Math.random()*notes.length)];
+    gain.gain.value=0.1;
+    osc.connect(gain).connect(audioCtx.destination);
+    osc.start();
+    osc.stop(audioCtx.currentTime+0.3);
+  },interval);
+}
+
+function stopBackgroundMusic(){
+  if(bgInterval) clearInterval(bgInterval);
+}
+
+// ---------------- Game Data ----------------
 let playerCards=[],enemyCards=[];
 let selectedPlayerCard=null,selectedAction=null;
-
 function createCard(name,hp,actions){return{name,maxHp:hp,hp,actions};}
 function draftCards(deck,count){
   const draft=[]; const copy=[...deck];
@@ -139,12 +203,11 @@ createCard('Bamboo',36,[{name:'Rapid Slash',type:'attack',value:15},{name:'Forti
 createCard('Creeper Vine',32,[{name:'Wrap',type:'attack',value:14},{name:'Harden',type:'buff',value:8}])
 ];
 
-// Random draft
 playerCards=draftCards(playerDeck,3);
 enemyCards=draftCards(enemyDeck,3);
 }
 
-// Rendering
+// ---------------- Rendering & Gameplay ----------------
 const playerPanel=document.getElementById('playerPanel');
 const enemyPanel=document.getElementById('enemyPanel');
 const message=document.getElementById('message');
@@ -176,19 +239,23 @@ enemyCards.forEach((card,i)=>{
 });
 }
 
-// Player interaction
 function selectPlayerCard(index){
 selectedPlayerCard=index; selectedAction=null; optionsDiv.innerHTML='';
 const card=playerCards[index];
 card.actions.forEach(act=>{
   const btn=document.createElement('button'); btn.className='optionBtn'; btn.textContent=act.name;
-  btn.onclick=()=>{selectedAction=act; 
-  if(act.type==='buff'){
-    card.hp+=act.value; if(card.hp>card.maxHp) card.hp=card.maxHp;
-    message.textContent=`${card.name} used ${act.name} and healed ${act.value}!`;
-    optionsDiv.innerHTML=''; renderCards();
-    setTimeout(enemyTurn,700);
-  } else{message.textContent='Select an enemy card to attack.';}};
+  btn.onclick=()=>{
+    selectedAction=act; 
+    if(act.type==='buff'){
+      card.hp+=act.value; if(card.hp>card.maxHp) card.hp=card.maxHp;
+      message.textContent=`${card.name} used ${act.name} and healed ${act.value}!`;
+      playHeal(); // Play heal sound
+      optionsDiv.innerHTML=''; renderCards();
+      setTimeout(enemyTurn,700);
+    } else{
+      message.textContent='Select an enemy card to attack.';
+    }
+  };
   optionsDiv.appendChild(btn);
 });
 renderCards();
@@ -199,6 +266,7 @@ const player=playerCards[playerIndex];
 const target=enemyCards[enemyIndex];
 target.hp-=action.value;
 message.textContent=`${player.name} used ${action.name} on ${target.name} for ${action.value}!`;
+playAttack();
 if(target.hp<=0) enemyCards.splice(enemyIndex,1);
 selectedPlayerCard=null; selectedAction=null; optionsDiv.innerHTML='';
 renderCards();
@@ -214,20 +282,48 @@ if(action.type==='attack'){
 const target=playerCards[Math.floor(Math.random()*playerCards.length)];
 target.hp-=action.value;
 message.textContent=`Enemy ${card.name} used ${action.name} on ${target.name} for ${action.value}!`;
+playAttack();
 if(target.hp<=0) playerCards=playerCards.filter(c=>c!==target);
 } else{
 card.hp+=action.value; if(card.hp>card.maxHp) card.hp=card.maxHp;
 message.textContent=`Enemy ${card.name} used ${action.name} and healed ${action.value}!`;
+playHeal();
 }
 renderCards();
 if(playerCards.length===0) return endGame('You Lose!');
 }
 
-// End & Restart
+// ---------------- End & Restart ----------------
 const winScreen=document.getElementById('winScreen');
 const winMessage=document.getElementById('winMessage');
-function endGame(result){gameScreen.style.display='none'; winScreen.style.display='block'; winMessage.textContent=result;}
-function restartGame(){initCards();winScreen.style.display='none';gameScreen.style.display='block';message.textContent='';optionsDiv.innerHTML='';renderCards();}
+function endGame(result){
+  gameScreen.style.display='none'; 
+  winScreen.style.display='block'; 
+  winMessage.textContent=result;
+  if(result.includes('Win')) playWin(); else playLose();
+}
+function restartGame(){
+  initCards();winScreen.style.display='none';gameScreen.style.display='block';message.textContent='';optionsDiv.innerHTML='';renderCards();
+}
+
+// ---------------- Settings Panel ----------------
+const settingsBtn=document.getElementById('settingsBtn');
+const settingsPanel=document.getElementById('settingsPanel');
+settingsBtn.onclick=()=>{settingsPanel.style.display=settingsPanel.style.display==='block'?'none':'block';};
+function closeSettings(){settingsPanel.style.display='none';}
+
+document.getElementById('muteMusic').addEventListener('change',(e)=>{
+  musicMuted=e.target.checked;
+});
+document.getElementById('muteSFX').addEventListener('change',(e)=>{
+  sfxMuted=e.target.checked;
+});
+
+// ---------------- Start Background Music on First Click ----------------
+document.body.addEventListener('click', ()=>{
+  if(audioCtx.state==='suspended') audioCtx.resume();
+  playBackgroundMusic();
+}, {once:true});
 </script>
 </body>
 </html>
